Fix background animation and vertical overflow

--- a/_sass/_contact-me.scss
+++ b/_sass/_contact-me.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
 
     background-color: #fff;
