--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -2,13 +2,16 @@
 
 .hero {
     position: relative; 
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
 .hero__background {
     position: absolute;
     width: inherit;
+    height: inherit;
+    left: 0;
+    top: 0;
 
     background-color: $hero-background-color;
 
